--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ version: 2.1
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.3
+  aws-ecr: circleci/aws-ecr@x.y.z
+  aws-ecs: circleci/aws-ecs@0x.y.z
 
 executors:
   default:
@@ -95,6 +97,10 @@ commit-workflow-filters: &commit-workflow-filters
       - develop
       - master
       - main
+release-workflow-filters: &release-workflow-filters
+  branches:
+    only:
+      - /release\/.*/
 
 workflows:
   version: 2
@@ -116,3 +122,45 @@ workflows:
           requires:
             - unit-test
           filters: *commit-workflow-filters
+
+  release-workflow:
+    jobs:
+      - bootstrap:
+          filters: *release-workflow-filters
+      - code-lint:
+          requires:
+            - bootstrap
+          filters: *release-workflow-filters
+      - unit-test:
+          name: unit-test
+          requires:
+            - bootstrap
+          filters: *release-workflow-filters
+      - sonar:
+          context: SonarCloud
+          requires:
+            - bootstrap
+          filters: *release-workflow-filters
+      - aws-ecr/build-and-push-image:
+          context: SonarCloud
+          name: build-image
+          create-repo: true
+          dockerfile: image/Dockerfile
+          no-output-timeout: 20m
+          profile-name: devops-007
+          repo: devops
+          skip-when-tags-exist: false
+          tag: 'latest,001'
+          requires:
+            - sonar
+            - unit-test
+            - code-lint
+          filters: *release-workflow-filters
+      #- aws-ecs/deploy-service-update:
+      #    context: SonarCloud
+      #    requires:
+      #      - aws-ecr/build-and-push-image
+      #    family: "${PREFIX}-service"
+      #    cluster-name: "${PREFIX}-cluster"
+      #    container-image-name-updates: "container=${PREFIX}-service,tag=${TAG}"
+      #    filters: *release-workflow-filters
