--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.3
   aws-ecr: circleci/aws-ecr@8.0.0
   aws-ecs: circleci/aws-ecs@2.2.1
+  jira: circleci/jira@1.3.1
 
 executors:
   default:
@@ -140,6 +141,8 @@ workflows:
           context: SonarCloud
           requires:
             - bootstrap
+          post-steps:
+            - jira/notify
           filters: *release-workflow-filters
       - aws-ecr/build-and-push-image:
           context: SonarCloud
