--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "app",
+  "name": "core",
   "version": "0.0.1",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "packages/app",
-      "packages/pwa",
-      "packages/core"
-    ]
-  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "core": "0.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
@@ -25,15 +17,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "bootstrap": "yarn install && npx lerna bootstrap",
-    "bootstrap:ci": "yarn install --frozen-lockfile && npx lerna bootstrap --ci",
-    "clean": "npx lerna clean --yes && rm -rf /tmp/metro-*",
-    "clean:root": "npx lerna clean --yes && rm -rf node_modules && rm -rf /tmp/metro-*",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "tsc -p tsconfig.json && eslint \"src/**/{*.ts,*.js,*.tsx}\""
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -54,8 +41,10 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
-    "lerna": "^4.0.0",
-    "prettier": "2.6.2"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.12.0",
+    "eslint-plugin-react": "^7.29.4"
   }
 }
