--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "core": "0.0.1",
+    "@cabd/core": "0.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
@@ -18,9 +18,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start2": "react-scripts start",
+    "start": "react-app-rewired start",
+    "build2": "react-scripts build",
+    "build": "react-app-rewired build",
+    "test2": "react-scripts test",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "tsc -p tsconfig.json && eslint \"src/**/{*.ts,*.js,*.tsx}\""
   },
@@ -53,6 +56,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sonarjs": "^0.12.0",
     "prettier": "^2.6.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   }
 }
