--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "core",
+  "name": "@cabd/core",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -44,7 +44,9 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "babel-eslint": "^10.1.0",
+    "customize-cra": "^1.0.0",
     "eslint": "^8.12.0",
-    "eslint-plugin-react": "^7.29.4"
+    "eslint-plugin-react": "^7.29.4",
+    "react-app-rewired": "^2.2.1"
   }
 }
