--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "@cabd/app",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -10,7 +10,6 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "@cabd/core": "0.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
@@ -18,12 +17,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start2": "react-scripts start",
-    "start": "react-app-rewired start",
-    "build2": "react-scripts build",
-    "build": "react-app-rewired build",
-    "test2": "react-scripts test",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "tsc -p tsconfig.json && eslint \"src/**/{*.ts,*.js,*.tsx}\""
   },
