--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,7 @@
   "name": "@cabd/core",
   "version": "0.0.1",
   "private": true,
+  "main": "lib/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
@@ -17,8 +18,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build": "tsc",
+    "dev": "tsc -w",    
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build2": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
